<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_text_disabled"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="93dp"
        android:layout_height="178dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/radio_btn_border"
            android:checked="true"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:text="@string/male"
            android:textColor="@color/black_text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/radio_btn_border"
            android:minHeight="48dp"
            android:text="@string/female"
            android:textColor="@color/black_text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightFilledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:hint="@string/weight_kg"
                android:textColorHint="@color/black_text"
                app:boxStrokeColor="@null"
                app:errorTextColor="@color/white_text"
                app:helperTextTextColor="@color/blue_grey_400">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weight_KG"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    app:boxStrokeColor="@null" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heightFilledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:hint="@string/height_cm"
                app:hintTextColor="@color/black_text"
                app:boxStrokeColor="@null">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height_CM"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ageFilledTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:hint="@string/age"
                android:textColorHint="@color/black_text">
                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:ems="5"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textColor="@color/black_text"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/calculateBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@color/green_400"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="6dp" />


</androidx.constraintlayout.widget.ConstraintLayout>